# rag

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  variables.env
.github/workflows/: ci-pipeline.yml  publish-artifacts.yml
ci/: publish_wheel.sh
deploy/compose/: .env  docker-compose-ingestor-server.yaml  docker-compose-rag-server.yaml  nemotron3-super-cloud.env  nemotron3-super-prompt.yaml  nemotron3-super.env  nims.yaml  nvdev.env  vectordb.yaml
deploy/workbench/: README.md  compose.yaml  quickstart.ipynb
docs/: accuracy-benchmarks.md  accuracy_perf.md  api-ingestor.md  api-rag.md  audio_ingestion.md  change-model.md  change-vectordb.md  conf.py  continuous-ingestion-object-storage.md  custom-metadata.md  debugging.md  deploy-docker-nvidia-hosted.md  deploy-docker-self-hosted.md  deploy-helm-from-repo.md  deploy-helm.md  documentation.md  enable-nemotron-thinking.md  evaluate.md  index.md  mig-deployment.md  milvus-configuration.md  model-profiles.md  mount-ingestor-volume.md  multi-collection-retrieval.md  multimodal-query.md  multiturn.md  nemoretriever-ocr.md  nemotron-parse-extraction.md  nemotron3-super-deployment.md  notebooks.md  nv-ingest-standalone.md  project.json  python-client.md  query-to-answer-pipeline.md  query_decomposition.md  readme.md  release-notes.md  retrieval-only-deployment.md  self-reflection.md  service-port-gpu-reference.md  (+7 more)
docs/api_reference/: openapi_schema_ingestor_server.json  (+1 more)
examples/: README.md
examples/rag_react_agent/: pyproject.toml
frontend/: Dockerfile  package.json  pnpm-lock.yaml
notebooks/: .env_library  building_rag_vdb_operator.ipynb  config.yaml  evaluation_01_ragas.ipynb  image_input.ipynb  langchain_nvidia_retriever.ipynb  launchable.ipynb  nb_metadata.ipynb  rag_event_ingest.ipynb  rag_library_lite_usage.ipynb  rag_library_usage.ipynb  retriever_api_usage.ipynb  summarization.ipynb
skill-source/: README.md
(+123 files in other folders)
