[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64", "setuptools-scm>=8"]


[tool.setuptools.packages.find]
where = ["src"]
include = ["rag_react_agent*"]


[tool.setuptools_scm]
git_describe_command = "git describe --long --first-parent"
root = "../.."


[project]
name = "rag-react-agent"
dynamic = ["version"]
dependencies = [
  # Keep package version constraints as open as possible to avoid conflicts with other packages. Always define a minimum
  # version when adding a new package. If unsure, default to using `~=` instead of `==`. Does not apply to nvidia-nat packages.
  # Keep sorted!!!
  "langgraph>=1.0.8",  # Required for react_agent workflow
  "langchain_classic",
  "nvidia-nat>=1.5.0a0,<2.0",  # Allow pre-release versions
  "nvidia-nat-langchain>=1.5.0a0,<2.0",  # Allow pre-release versions
  "nvidia-rag[rag]~=2.4",
  "transformers>=5.1.0",
]
requires-python = ">=3.11,<3.14"
description = "RAG React Agent example using NVIDIA RAG with NeMo Agent Toolkit"
keywords = ["ai", "rag", "agents"]
license = { text = "Apache-2.0" }
authors = [{ name = "NVIDIA Corporation" }]
maintainers = [{ name = "NVIDIA Corporation" }]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
documentation = "https://docs.nvidia.com/nemo/agent-toolkit/latest/"
source = "https://github.com/NVIDIA/NeMo-Agent-Toolkit"


[tool.uv]
managed = true
config-settings = { editable_mode = "compat" }
prerelease = "allow"  # nvidia-nat packages are currently pre-release only


[tool.uv.sources]
nvidia-rag = { path = "../..", editable = true }


[project.entry-points.'nat.components']
nat_rag = "rag_react_agent.register"
